# monkeyjump

./: .gitignore  CHANGELOG  PLANS.md  README.md  TODO.md  changelog.txt  keybindings.conf  main.py  monkeyjump  planned.txt  pyproject.toml  run.sh  setup.py
burnlib/: README.md  analyze.py  apf.py  bip.py  common.py  configreader.py  goengine.py  imageengine.py  popen2.py  scriptlib.py  teststuff.py
conf/: gnugocmd.conf  keybindings.conf  theme.conf
dotimages/: README.md  goboard.xpm
go/: .gitignore  Makefile  README.md  analyze.go  app.go  board.go  coord_test.go  go.mod  gtp.go  gtp_integration_test.go  keybindings.go  main.go  paths.go  renderer.go  sdl.go  sgf.go
go/conf/: keybindings.conf
sgfs/: crashed.sgf  edges.sgf  i.sgf  lda.sgf  saved.sgf
